--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,12 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/payment-gateway
 JWT_SECRET=your_secret_key
+
+
+
+# Select "payment_intent.succeeded" and "payment_intent.payment_failed"
+# Copy the Signing Secret and add it to .env:
+# STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+
+# EMAIL_USER=your_email@gmail.com
+# EMAIL_PASS=your_email_password
